common/istio/istio-namespace/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-operator-managed: Reconcile
    istio-injection: disabled
    pod-security.kubernetes.io/enforce: restricted
