common/istio/istio-namespace/base/allow-istiod-webhook-apiserver.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: istiod-webhook-apiserver
  namespace: istio-system
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - istiod
  # Kubernetes API server must reach Istiod injector webhook admission port.
  ingress:
  - ports:
    - protocol: TCP
      port: 15017
  policyTypes:
  - Ingress
