common/istio/istio-namespace/base/allow-knative-to-istio-gateways.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-knative-to-istio-gateways
  namespace: istio-system
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - istio-ingressgateway
      - cluster-local-gateway
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: knative-serving
    ports:
    - protocol: TCP
      port: 8080
  policyTypes:
  - Ingress
